--- a/src/assets/report-template.html
+++ b/src/assets/report-template.html
@@ -7,6 +7,15 @@
         margin: 16mm;
       }
 
+      @media print {
+        .a4-page {
+          width: 100%;
+          margin: unset;
+          min-height: unset;
+          padding: unset;
+        }
+      }
+
       body {
         font-family: Tahoma, sans-serif;
         font-size: 18pt;
@@ -14,10 +23,11 @@
 
       .day-title:not(:nth-of-type(1)) {
         page-break-before: always;
+        margin-top: 20cm;
       }
 
       .text-box {
-        margin-bottom: 18px;
+        margin-bottom: 80px;
       }
 
       img {
@@ -38,42 +48,58 @@
         flex-direction: column;
         justify-content: center;
       }
+
+      body {
+        background-color: lightgray;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .a4-page {
+        width: 210mm;
+        min-height: 297mm;
+        padding: 0.6in;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        background-color: white;
+      }
     </style>
     <title>Week %WEEKNUMBER% - %THEME%</title>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script src="https://raw.githubusercontent.com/davidnbooth/html3pdf.js/merge_PRs/src/index.js"></script> -->
-    <script type="module">
-      import html2pdf from 'https://raw.githubusercontent.com/davidnbooth/html3pdf.js/merge_PRs/src/index.js';
-      addEventListener('load', (event) => {
-        alert('OK');
-        html2pdf(document.body);
-      });
-    </script>
-    <script></script>
   </head>
   <body>
-    <h2>Week %WEEKNUMBER% - %THEME%</h2>
+    <div class="a4-page">
+      <h2>Week %WEEKNUMBER% - %THEME%</h2>
 
-    <div style="height: 10px"></div>
+      <div style="height: 10px"></div>
 
-    <h3 class="day-title">Maandag</h3>
-    <div class="text-box">%TEXT_DAY_0%</div>
-    <div class="img-box">%IMG_DAY_0%</div>
+      <h3 class="day-title">Maandag</h3>
+      <div class="text-box">%TEXT_DAY_0%</div>
+      <div class="img-box">%IMG_DAY_0%</div>
+    </div>
 
-    <h3 class="day-title">Dinsdag</h3>
-    <div class="text-box">%TEXT_DAY_1%</div>
-    <div class="img-box">%IMG_DAY_1%</div>
+    <div class="a4-page">
+      <h3 class="day-title">Dinsdag</h3>
+      <div class="text-box">%TEXT_DAY_1%</div>
+      <div class="img-box">%IMG_DAY_1%</div>
+    </div>
 
-    <h3 class="day-title">Woensdag</h3>
-    <div class="text-box">%TEXT_DAY_2%</div>
-    <div class="img-box">%IMG_DAY_2%</div>
+    <div class="a4-page">
+      <h3 class="day-title">Woensdag</h3>
+      <div class="text-box">%TEXT_DAY_2%</div>
+      <div class="img-box">%IMG_DAY_2%</div>
+    </div>
 
-    <h3 class="day-title">Donderdag</h3>
-    <div class="text-box">%TEXT_DAY_3%</div>
-    <div class="img-box">%IMG_DAY_3%</div>
+    <div class="a4-page">
+      <h3 class="day-title">Donderdag</h3>
+      <div class="text-box">%TEXT_DAY_3%</div>
+      <div class="img-box">%IMG_DAY_3%</div>
+    </div>
 
-    <h3 class="day-title">Vrijdag</h3>
-    <div class="text-box">%TEXT_DAY_4%</div>
-    <div class="img-box">%IMG_DAY_4%</div>
+    <div class="a4-page">
+      <h3 class="day-title">Vrijdag</h3>
+      <div class="text-box">%TEXT_DAY_4%</div>
+      <div class="img-box">%IMG_DAY_4%</div>
+    </div>
   </body>
 </html>
